apply plugin: 'java'

sourceCompatibility = 1.8
targetCompatibility = 1.8

group 'com'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

test {
    maxParallelForks = 3
}

dependencies {
    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.14.0'
    compile group: 'org.seleniumhq.selenium', name: 'selenium-server', version: '3.14.0'
    compile group: 'io.cucumber', name: 'cucumber-picocontainer', version: '4.2.0'
    compile group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '2.2.4'
    compile group: 'io.cucumber', name: 'cucumber-java', version: '4.2.0'
    testCompile group: 'io.cucumber', name: 'cucumber-junit', version: '4.2.0'
    compile group: 'net.masterthought', name: 'cucumber-reporting', version: '4.2.3'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    // https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox-tools
    compile group: 'org.apache.pdfbox', name: 'pdfbox-tools', version: '2.0.15'
    // https://mvnrepository.com/artifact/org.apache.lucene/lucene-core
    compile group: 'org.apache.lucene', name: 'lucene-core', version: '8.1.1'
}